Added database handling and new activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pipeology">
         <activity
+            android:name=".SecondActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Pipeology" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
